# Madoka

./: .clang-format  .gitignore  CMakeLists.txt  Design.md  Main.cc  Readme.md  Roadmap.md
AST/: AST.cc  AST.h  Codegen.cc  Evaluate.cc  Print.cc
CodeGenerator/: CodeGenerator.cc  CodeGenerator.h  print.asm
Error/: Error.cc  Error.h
Examples/: test_comments.mdk  test_comparison.mdk  test_definition_assignment.mdk  test_fib.mdk  test_functions.mdk  test_overload.mdk  test_print.mdk  test_type_inference.mdk
Parser/: Parser.cc  Parser.h
Quads/: Quads.cc  Quads.h
SymbolTable/: Symbol.cc  Symbol.h  SymbolTable.cc  SymbolTable.h
Tokenizer/: Token.cc  Token.h  Tokenizer.cc  Tokenizer.h
TypeChecker/: TypeChecker.cc  TypeChecker.h
